--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,12 @@ typings/
 
 # next.js build output
 .next
+t10k-images-idx3-ubyte
+t10k-labels-idx1-ubyte
+train-images-idx3-ubyte
+train-labels-idx1-ubyte
+package-lock.json
+
+# should be build
+dist
+
